# KurvaSpiral

./: CMakeLists.txt  main.c  test.c
